updated card hight to fix issue
there was an issue that the profile pic would get off the card when the bio is too long. gave the cards more height.

--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,7 @@
   background-color: #4c4d4f;
   margin: 5px;
   width: 250px;
-  height: 300px;
+  height: 375px;
   border: 1px solid black;
   display: flex;
   flex-direction: column;
